// Copyright 2022 DGT NETWORK INC Â© Stanislav Parsov
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "sawtooth.sdk.protobuf";
// option go_package = "batch_pb2";

 

message NotaryRequest {
    // Public key for the client that signed the request
    string       signer_public_key = 1 ;
    string       signature         = 2 ;
    bytes        payload           = 3 ;

}

message NotaryHeader {
    // Public key for the notary that signed the user request
    string signer_public_key = 1;

    // user request signature
    string req_signature = 2;
}

message NotaryRequestSign {
    // The serialized version of the NotaryHeader
    bytes header = 1;

    // The signature derived from request signature the header
    string header_signature = 2;

    // user request payload
    bytes payload = 3;

}

